# rust_from_beginner_2_practical

21-axumapp/: Cargo.toml  README.md
21-axumapp/assets2/: test.html
21-axumapp/axumapp02/: Cargo.toml
21-axumapp/axumapp02/assets3/: index.html
21-axumapp/axumapp02/src/: main.rs
21-axumapp/first_helloworld/: Cargo.toml
21-axumapp/first_helloworld/src/: main.rs
21-axumapp/src/: handlers.rs  main.rs
22-todo/: Cargo.toml  start.bat
22-todo/src/: main.rs
